# AutoShortcut

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md  build.bat  build.rs
locales/: en.yml  zh-CN.yml  zh-TW.yml
resource/: AutoShortcut.exe.manifest  resource.rc
src/: cli.rs  config.rs  console.rs  main.rs  template.rs  test.rs  utils.rs
