[package]
name = "AutoShortcut"
version = "1.2.0"
edition = "2021"

[build-dependencies]
embed-resource = "1.6.5"
thunk-rs = "0.3.2"

# 优化编译体积
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
vc-ltl = "5.1.1"
anyhow = "1.0.86"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "3.1.8", features = ["derive"] }
console = "0.15.8"
walkdir = "2.5.0"
mslnk = "0.1.8"
glob = "0.3"
