[package]
name = "AutoShortcut"
version = "2.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "3.0.5"
thunk-rs = "0.3.5"

# 优化编译体积
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
vc-ltl = "5.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.8.23"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
walkdir = "2.5.0"
aho-corasick = "1.1.3"
glob = "0.3"
goblin = "0.10.1"
memmap2 = "0.9.8"
rust-i18n = "3"
sys-locale = "0.3.2"
chrono = "0.4.41"
anyhow = "1.0.99"

[dependencies.windows]
version = "0.61.3"
features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Com"]
